# NvidiaOpticalFlowSDKforPytorch

./: .gitignore  CMakeLists.txt  License.md  README.md  pyproject.toml
assets/: README.md
examples/: compare_fast_vs_slow_and_render_video.py  minimal_example.py  render_sintel_videos_and_compute_metrics.py
optical_flow_sdk/Common/NvOFBase/: NvOF.cpp  NvOF.h
optical_flow_sdk/NvOFBasicSamples/: CMakeLists.txt
optical_flow_sdk/NvOFBasicSamples/AppOFCuda/: AppOFCuda.cpp  CMakeLists.txt
src/: nvof_torch.cpp
src/of/: __init__.py  datasets.py  io.py  metrics.py  visualization.py
src/of/methods/: __init__.py  nvidia_sdk.py
tests/: __init__.py  conftest.py  test_datasets.py  test_integration.py  test_io.py  test_metrics.py  test_nvidia_sdk.py  test_visualization.py
